# cross_asset_ems

./: .gitattributes  .gitignore  .markdownlint.jsonc  AUDIT_2026-07-17.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  DEVELOPMENT.md  KNOWLEDGE_BASE.md  README.md  SETUP.md  build.gradle.kts  build_log.txt  cliff.toml  gradle.properties  index.md  package-lock.json  package.json  settings.gradle.kts
.devcontainer/: devcontainer.json  post-create.sh
.githooks/: commit-msg  pre-commit  pre-push
.github/: copilot-instructions.md  dependabot.yml
.obsidian/: app.json
.opencode/: ralph-loop.local.md
00_index/: HOME.md  USAGE.md  architecture-index.md  asset-class-matrix.md  workflow-index.md
30_venues/: _venue-index.md  bloomberg-allq.md  bloomberg-btmm.md  bloomberg-bwic-owic.md  bloomberg-cbnd.md  bloomberg-cdsw.md  bloomberg-cp-cd.md  bloomberg-fit.md  bloomberg-ib.md  bloomberg-repo.md  bloomberg-swpm.md  bloomberg-tba.md  bloomberg-tbill.md  bloomberg-toms.md  brokertec.md  ebs.md  ice-bondpoint.md  marketaxess.md  municenter.md  neptune.md  sef-platforms.md  tradeweb.md  treasury-direct.md  triparty-bnym-jpm.md  yieldbroker.md
40_regulatory/: cftc-sdr.md  dtcc-sdr.md  fdic-occ.md  fed-reporting.md  ficc-reporting.md  finra.md  msrb-rtrs.md  sef-reporting.md  trace.md
50_clearing_settlement/: clearstream.md  cme-clear.md  dtc.md  euroclear.md  fedwire.md  ficc-clearing.md  ice-clear.md  lch.md  markitserv.md  triparty-clearing.md
60_documentation/: cds-annex.md  convertible-indenture.md  csa.md  dvp.md  gmra.md  isda.md  loan-agreement.md  psa.md  sifma-tba-guidelines.md
70_concepts/: ccp-vs-bilateral.md  clob-vs-rfq.md  currency-in-execution.md  fix-protocol-basics.md  glossary-index.md  otr-vs-off-the-run.md  portfolio-trading.md  tba-vs-specified-pool.md  two-way-vs-one-way.md  what-is-allq.md  what-is-netting.md  what-is-rfq.md
80_architecture/: arch-aeron-internals.md  arch-aggregation.md  arch-allocation-service.md  arch-api-first.md  arch-automation-layer.md  arch-best-execution.md  arch-borrow-service.md  arch-bulk-io.md  arch-compliance.md  arch-configuration-service.md  arch-confirmation-affirmation.md  arch-corporate-actions.md  arch-ddd-tdd.md  arch-deployment.md  arch-event-sourcing.md  arch-firm-desk-user.md  arch-fix-api-bridge.md  arch-fix-appendix-d.md  arch-fix-fsm-design.md  arch-fx-netting.md  arch-identity-chaining.md  arch-ioi.md  arch-jmx-introspection.md  arch-jurisdictional-compliance.md  arch-multileg.md  arch-notification-service.md  arch-observability.md  arch-order-route-lifecycle.md  arch-order-staged.md  arch-position-service.md  arch-pretrade-analytics.md  arch-pricing-service.md  arch-projection-engine.md  arch-quote-server.md  arch-realtime-analytics.md  arch-reference-data-service.md  arch-regulatory-reporting-service.md  arch-resilience-24x7.md  arch-rfq.md  arch-risk-engine.md  (+13 more)
IMPL/: CHECKPOINT.md  DELEGATION.md  HERMES.md  LOOP.md  OPENCODE_LOOP.md  OPENCODE_PROMPT.txt  PLAN.md
audits/: AUDIT_2026-07-17.md  review_2026-06-12.md
build-logic/: build.gradle.kts  settings.gradle.kts
cpp/: CMakeLists.txt  README.md
cpp/ems-aaa/: CMakeLists.txt
cpp/ems-aaa/include/ems_aaa/: ems_aaa.hpp
cpp/ems-bench/: CMakeLists.txt
cpp/ems-bench/include/ems_bench/: ems_bench.hpp
cpp/ems-core/: CMakeLists.txt
cpp/ems-core/include/ems_core/: ems_core.hpp
cpp/ems-fix-bridge/: CMakeLists.txt
cpp/ems-fix-bridge/include/ems_fix_bridge/: ems_fix_bridge.hpp
cpp/ems-fsm/: CMakeLists.txt
cpp/ems-fsm/include/ems_fsm/: ems_fsm.hpp
cpp/ems-fsm/test/: fsm_compile_test.cpp
cpp/ems-it/: CMakeLists.txt
cpp/ems-it/include/ems_it/: ems_it.hpp
cpp/ems-market-data/: CMakeLists.txt
cpp/ems-market-data/include/ems_market_data/: ems_market_data.hpp
cpp/ems-observability/: CMakeLists.txt
cpp/ems-observability/include/ems_observability/: ems_observability.hpp
cpp/ems-oms/: CMakeLists.txt
cpp/ems-oms/include/ems_oms/: ems_oms.hpp
cpp/ems-ops/: CMakeLists.txt
cpp/ems-ops/include/ems_ops/: ems_ops.hpp
cpp/ems-posttrade/: CMakeLists.txt
cpp/ems-posttrade/include/ems_posttrade/: ems_posttrade.hpp
cpp/ems-pretrade/: CMakeLists.txt
cpp/ems-pretrade/include/ems_pretrade/: ems_pretrade.hpp
cpp/ems-transport/: CMakeLists.txt
cpp/ems-transport/include/ems_transport/: ems_transport.hpp
cpp/ems-validator/: CMakeLists.txt
cpp/ems-validator/include/ems_validator/: ems_validator.hpp
cpp/ems-venue-connectivity/: CMakeLists.txt
cpp/ems-venue-connectivity/include/ems_venue_connectivity/: ems_venue_connectivity.hpp
docs/: CI_BRANCH_PROTECTION.md  DIAGNOSTICS.md  OPERATIONS.md  QA_REVIEW.md  README.md  TESTING.md  TRADER_DESKTOP_DEMO.md  USER_GUIDE.md
fsm/: EVALUATION-venue-session.md  venue_session.fsm.gemma-draft.yaml  venue_session.fsm.yaml
gradle/: libs.versions.toml
infra/: README.md
java/: README.md
rust/: README.md
rust/ems-aaa/: Cargo.toml
rust/ems-aaa/src/: lib.rs
rust/ems-bench/: Cargo.toml
rust/ems-bench/src/: lib.rs
rust/ems-core/: Cargo.toml
rust/ems-core/src/: lib.rs
rust/ems-fix-bridge/: Cargo.toml
rust/ems-fix-bridge/src/: lib.rs
rust/ems-fsm/: Cargo.toml
rust/ems-fsm/src/: lib.rs
rust/ems-it/: Cargo.toml
rust/ems-it/src/: lib.rs
rust/ems-market-data/: Cargo.toml
rust/ems-market-data/src/: lib.rs
rust/ems-observability/: Cargo.toml
rust/ems-observability/src/: lib.rs
rust/ems-oms/: Cargo.toml
rust/ems-oms/src/: lib.rs
rust/ems-ops/: Cargo.toml
rust/ems-ops/src/: lib.rs
rust/ems-posttrade/: Cargo.toml
rust/ems-posttrade/src/: lib.rs
rust/ems-pretrade/: Cargo.toml
rust/ems-pretrade/src/: lib.rs
rust/ems-transport/: Cargo.toml
rust/ems-transport/src/: lib.rs
rust/ems-validator/: Cargo.toml
rust/ems-validator/src/: lib.rs
rust/ems-venue-connectivity/: Cargo.toml
rust/ems-venue-connectivity/src/: lib.rs
schemas/: README.md
scripts/: README.md
templates/: asset-class-template.md  clearing-settlement-template.md  concept-template.md  regulatory-template.md  venue-template.md  workflow-template.md
tests/: README.md
tools/: README.md  (+1 more)
(+1005 files in other folders)
