[package]
name             = "ems-aaa"
description      = "Authentication / authorization / accounting + identity chain + sessions."
version          = { workspace = true }
edition          = { workspace = true }
rust-version     = { workspace = true }
license          = { workspace = true }
authors          = { workspace = true }
repository       = { workspace = true }

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
ems-core      = { path = "../ems-core" }
ems-transport = { path = "../ems-transport" }
uuid          = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }


[lints.clippy]
all       = "deny"
