[package]
name             = "ems-bench"
description      = "Criterion-based hot-path benchmarks."
version          = { workspace = true }
edition          = { workspace = true }
rust-version     = { workspace = true }
license          = { workspace = true }
authors          = { workspace = true }
repository       = { workspace = true }

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
ems-core      = { path = "../ems-core" }
ems-transport = { path = "../ems-transport" }
ems-fsm       = { path = "../ems-fsm" }

[dev-dependencies]
proptest  = { workspace = true }
criterion = { workspace = true }

[lints.clippy]
all       = "deny"
