[package]
name             = "ems-fix-bridge"
description      = "FIX gateway (in/out) + REST API + Bulk I/O."
version          = { workspace = true }
edition          = { workspace = true }
rust-version     = { workspace = true }
license          = { workspace = true }
authors          = { workspace = true }
repository       = { workspace = true }

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
ems-core      = { path = "../ems-core" }
ems-oms       = { path = "../ems-oms" }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }


[lints.clippy]
all       = "deny"
