[package]
name             = "ems-fsm"
description      = "Shared FIX-compliant FSM. YAML in schemas/fsm/, codegen to src/generated/."
version          = { workspace = true }
edition          = { workspace = true }
rust-version     = { workspace = true }
license          = { workspace = true }
authors          = { workspace = true }
repository       = { workspace = true }

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
ems-core    = { path = "../ems-core" }
serde       = { workspace = true }
serde_yaml  = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }


[lints.clippy]
all       = "deny"
