[package]
name             = "ems-it"
description      = "Cross-crate integration tests using in-process Aeron + SBE mocks."
version          = { workspace = true }
edition          = { workspace = true }
rust-version     = { workspace = true }
license          = { workspace = true }
authors          = { workspace = true }
repository       = { workspace = true }

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
ems-core      = { path = "../ems-core" }
ems-fsm       = { path = "../ems-fsm" }
ems-transport = { path = "../ems-transport" }
ems-oms       = { path = "../ems-oms" }
ems-validator = { path = "../ems-validator" }
ems-fix-bridge = { path = "../ems-fix-bridge" }
tokio         = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }


[lints.clippy]
all       = "deny"
