[package]
name             = "ems-oms"
description      = "Staged Order Manager + Router + Automation + Multi-leg/Package."
version          = { workspace = true }
edition          = { workspace = true }
rust-version     = { workspace = true }
license          = { workspace = true }
authors          = { workspace = true }
repository       = { workspace = true }

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
ems-core      = { path = "../ems-core" }
ems-fsm       = { path = "../ems-fsm" }
ems-transport = { path = "../ems-transport" }
ems-aaa       = { path = "../ems-aaa" }
ems-validator = { path = "../ems-validator" }

[dev-dependencies]
proptest  = { workspace = true }


[lints.clippy]
all       = "deny"
