[package]
name             = "ems-pretrade"
description      = "Compliance + Risk + Position + Pricing + Pre-trade analytics."
version          = { workspace = true }
edition          = { workspace = true }
rust-version     = { workspace = true }
license          = { workspace = true }
authors          = { workspace = true }
repository       = { workspace = true }

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
ems-core         = { path = "../ems-core" }
ems-oms          = { path = "../ems-oms" }
ems-market-data  = { path = "../ems-market-data" }
ems-aaa          = { path = "../ems-aaa" }

[dev-dependencies]
proptest  = { workspace = true }


[lints.clippy]
all       = "deny"
