[package]
name             = "ems-transport"
description      = "SBE + Aeron transport (cluster + archive)."
version          = { workspace = true }
edition          = { workspace = true }
rust-version     = { workspace = true }
license          = { workspace = true }
authors          = { workspace = true }
repository       = { workspace = true }

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
ems-core  = { path = "../ems-core" }
aeron-rs  = { workspace = true }
tokio     = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }


[lints.clippy]
all       = "deny"
