[package]
name             = "ems-validator"
description      = "Hard-reject layer with standardized reject codes."
version          = { workspace = true }
edition          = { workspace = true }
rust-version     = { workspace = true }
license          = { workspace = true }
authors          = { workspace = true }
repository       = { workspace = true }

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
ems-core      = { path = "../ems-core" }
ems-transport = { path = "../ems-transport" }
ems-aaa       = { path = "../ems-aaa" }

[dev-dependencies]
proptest  = { workspace = true }


[lints.clippy]
all       = "deny"
